Rename used Error model to OptimadeError
